[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:_:UserWarning",
    "ignore:unclosed <socket.socket fd=\\d+, family=AddressFamily.AF_UNIX, type=SocketKind.SOCK_DGRAM, proto=0, raddr=/run/systemd/journal/dev-log>:ResourceWarning",
    "ignore:unclosed file <_io.FileIO name='/tmp/aiopenapi3-debug.log' mode='ab' closefd=True>:ResourceWarning",
    "ignore:unclosed file <_io.TextIOWrapper name='/tmp/aiopenapi3-debug.log' mode='a' encoding='UTF-8'>:ResourceWarning",
    "ignore:unclosed <ssl.SSLSocket:ResourceWarning",
    "ignore:unclosed <socket.socket fd=:ResourceWarning",
    "ignore:Ignoring Schema with additionalProperties and named properties:UserWarning",
#    "error::pytest.PytestUnraisableExceptionWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:The loop argument is deprecated since Python 3.8, and scheduled for removal in Python 3.10.:DeprecationWarning',
    # pydantic2
    'ignore:Support for "config" as "type" is deprecated and will be removed in a future version:DeprecationWarning',
    'ignore:Valid config keys have changed in V2:UserWarning',
#    'ignore:The `update_forward_refs` method is deprecated; use `model_rebuild` instead.:DeprecationWarning',
#    'ignore:The `parse_obj` method is deprecated; use `model_validate` instead.:DeprecationWarning',
#    'ignore:The `construct` method is deprecated; use `model_construct` instead.:DeprecationWarning',
    'ignore:The `dict` method is deprecated; use `model_dump` instead.:DeprecationWarning',
    'ignore:`pydantic.config.Extra` is deprecated, use literal values instead .*$:DeprecationWarning',
    'ignore:Support for class-based `config` is deprecated, use ConfigDict instead.:DeprecationWarning',
#    'ignore:The `__fields_set__` attribute is deprecated, use `model_fields_set` instead.:DeprecationWarning',
    "ignore:'flask.Markup' is deprecated and will be removed in Flask 2.4. Import 'markupsafe.Markup' instead.:DeprecationWarning"
]
asyncio_mode = "strict"

log_cli = "yes"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
