[metadata]
name = aiopenapi3
version = attr: aiopenapi3.version.__version__
url = https://github.com/commonism/aiopenapi3
description = client and validator for OpenAPI3 3.0, OpenAPI 3.1, Swagger 2.0
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openapi openapi3
license =
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages =
    aiopenapi3
    aiopenapi3.v20
    aiopenapi3.v30
    aiopenapi3.v31

install_requires =
    PyYaml
    pydantic<=1.11.0
    pydantic[email]
    yarl
    httpx
    httpx-auth
    more-itertools
    typing_extensions; python_version<"3.8"
    pathlib3x; python_version<"3.9"
    jmespath


[options.entry_points]
console_scripts =
    aiopenapi3=aiopenapi3.cli:main [cli]

[options.extras_require]
tests =
    pytest
    pytest-asyncio
    pytest-httpx
    pytest-cov
    fastapi-versioning
    hypercorn
    uvloop
    flask
    flask_bootstrap
    flask_wtf
    wtforms
    asgiref

socks =
    httpx_socks
